objects/Financial_Account_SFDC2__c.object
<CustomObject>
    <description>Used to capture customer financial account information for SFDC 2.0 integration</description>
    <fields>
        <fullName>Account_Count__c</fullName>
        <label>Account Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Sales Associate on Account</description>
        <label>Account Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Last_4__c</fullName>
        <label>Account Number (Last 4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automobile__c</fullName>
        <label>Automobile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Id__c</fullName>
        <label>Branch Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignAutomationTriggerSFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC2: Used in time-based workflows for campaign automations that rely on triggers based on dates associated with Financial Account</description>
        <label>CampaignAutomationTriggerSFDC2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Auto-Lending</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lending</fullName>
                </value>
                <value>
                    <fullName>Specialty Deposits</fullName>
                </value>
                <value>
                    <fullName>Virtus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Account_Total_SFDC2__c</fullName>
        <description>Count of Financial Accounts</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to sum or count the number of Financial Accounts</inlineHelpText>
        <label>Financial Account Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JHA_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>JHA Record ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JH_Master_Table__c</fullName>
        <label>JH Master Table</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JhaKeyAccountHash__c</fullName>
        <label>JhaKeyAccountHash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Statement_Date__c</fullName>
        <label>Last Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email_SFDC2__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>IF(Account_Count__c &gt; 1, &apos;Joint&apos;, &apos;Single&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month_ACH_Total__c</fullName>
        <label>Previous Month ACH Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_POS_Count__c</fullName>
        <label>Previous Month POS Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Rewards_POS_Count__c</fullName>
        <label>Previous Month Rewards POS Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Class__c</fullName>
        <label>Product Sub Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <label>Property Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <label>Property Zip Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_SFDC2__c</fullName>
        <description>Sales Associate in Jack Henry to map to Relationship Manager on Financial Account</description>
        <label>Relationship Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirement Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Associate__c</fullName>
        <label>Sales Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Card_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Card Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Id__c</fullName>
        <label>Status Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust_Documents_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trust Documents Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zero_Balance_Date__c</fullName>
        <label>Zero Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zero_Balance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Balance Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>Advisor_Firm_Financial_Accounts_SFDC2</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Advisor</value>
        </filters>
        <label>Advisor Firm Financial Accounts  SFDC2</label>
        <sharedTo>
            <group>Advisor_SFDC2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Business_Banking_Financial_Account_SFDC2</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Business Banking</value>
        </filters>
        <label>Business Banking Financial Account SFDC2</label>
        <sharedTo>
            <group>Business_Banking_SFDC2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Deposit_Financial_Account_SFDC2</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Consumer Deposits</value>
        </filters>
        <label>Consumer Deposit Financial Account SFDC2</label>
        <sharedTo>
            <group>Consumer_Deposits_SFDC2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <sharedTo>
            <group>Advisor_SFDC2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dealer_Services_Financial_Accounts_SFDC2</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Auto-Lending</value>
        </filters>
        <label>Dealer Services Financial Accounts SFDC2</label>
        <sharedTo>
            <group>Auto_Lending_SFDC2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Virtus_Financial_Accounts_SFDC2</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Virtus</value>
        </filters>
        <label>Virtus Financial Accounts SFDC2</label>
        <sharedTo>
            <group>Virtus_SFDC2</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>CD</fullName>
        <active>true</active>
        <label>CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>CD_Employee</fullName>
        <active>true</active>
        <description>Private Record Type for Employee Accounts</description>
        <label>CD - Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposits</fullName>
        <active>true</active>
        <label>Deposits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposits_Employee</fullName>
        <active>true</active>
        <description>Private Record Type for Employee Accounts</description>
        <label>Deposits - Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loans</fullName>
        <active>true</active>
        <label>Loans</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loans_Employee</fullName>
        <active>true</active>
        <description>Private Record Type for Employee Accounts</description>
        <label>Loans - Employee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>